--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -589,6 +589,29 @@ footer {
   text-decoration-line: none;
   padding: 11px 15px;
 }
+
+button {
+  display: inline-block;
+  padding: 0 !important;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 400;
+  box-shadow: inset 0 -0.6em 1em -0.35em rgba(0, 0, 0, 0.17),
+    inset 0 0.6em 2em -0.3em rgba(255, 255, 255, 0.15),
+    inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
+  text-align: center;
+  position: relative;
+}
+button:active {
+  box-shadow: inset 0 0.6em 2em -0.3em rgba(0, 0, 0, 0.15),
+    inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
+}
+.material-icons {
+  font-family: "Material Icons";
+  font-size: 24px;
+}
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
