--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -590,7 +590,7 @@ footer {
   padding: 11px 15px;
 }
 
-button {
+.MuiButtonBase-root {
   display: inline-block;
   padding: 0 !important;
   margin: 0 0.3em 0.3em 0;
@@ -604,7 +604,7 @@ button {
   text-align: center;
   position: relative;
 }
-button:active {
+.MuiButtonBase-root:active {
   box-shadow: inset 0 0.6em 2em -0.3em rgba(0, 0, 0, 0.15),
     inset 0 0 0em 0.05em rgba(255, 255, 255, 0.12);
 }
@@ -615,6 +615,12 @@ button:active {
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
+  }
+  .MuiButtonBase-root {
+    line-height: initial;
+    margin-left: 0 !important;
+    margin-top: 5px;
+    width: 100%;
   }
 }
 .MuiTypography-root {
