--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -3,7 +3,7 @@
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
-  font: 140%/1.5em SNES;
+  font: 140%/1.5em "SNES";
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #ffffff;
-  font-family: SNES;
+  font-family: "SNES";
   font-weight: normal;
   letter-spacing: 1px;
   word-wrap: break-word;
@@ -627,7 +627,7 @@ footer {
   }
 }
 .MuiTypography-root {
-  font-family: SNES;
+  font-family: "SNES";
 }
 
 .MuiButtonBase-root {
