fix for build issue

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "SNES";
-  src: url("../../public/fonts/SnesItalic-1G9Be.ttf");
+  src: url("../fonts/SnesItalic-1G9Be.ttf");
 }
 
 html {
